--- a/index.html
+++ b/index.html
@@ -39,21 +39,21 @@
         <div class="col-lg-1">
         </div>
         <div class="col-lg-10">
-          <img alt="TC Aviamentos" class="" src="./site_bosta_files/capa-site-tc.png" width="100%" height="700" style="margin-bottom: 30px">
+          <img alt="TC Aviamentos" class="" src="./site_files/capa-site-tc.png" width="100%" height="700" style="margin-bottom: 30px">
         </div>
       </div>
       <div class="row">
         <div class="col-lg-4 col-md-12">
           <h2>CARUARU/CENTRO/PETRÓPOLIS</h2>
-          <iframe src="./site_bosta_files/embed.html" width="100%" height="400" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+          <iframe src="./site_files/embed.html" width="100%" height="400" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
         </div>
         <div class="col-lg-4 col-md-12">
           <h2>CARUARU/SALGADO</h2>
-          <iframe src="./site_bosta_files/embed(1).html" width="100%" height="400" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+          <iframe src="./site_files/embed(1).html" width="100%" height="400" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
         </div>
         <div class="col-lg-4 col-md-12">
           <h2>TORITAMA</h2>
-          <iframe src="./site_bosta_files/embed(2).html" width="100%" height="400" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+          <iframe src="./site_files/embed(2).html" width="100%" height="400" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
         </div>
       </div>
       <footer class="py-3 my-4">
